--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sinus skateboards</title>
+    <title>PicFinder</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
 </head>
 
 <body>
    
+    <header>
+        
+        <h1>PicFinder</h1>
+
+    </header>
+
+    <article>
+        
+        <form action="" id="search">
+
+            Search pic:<input type="text" id="searchPic">
+            <section>
+            Amount: <select name="amount" id="amount"></select>
+            Size: <select name="size" id="size"></select>
+            <input type="button" value="Search" id="button">
+            </section>
+        </form>
+
+    </article>
+
+    <main id="displayResult"></main>
+
+    <footer>
+
+        <p>All rights bullshit</p>
+
+    </footer>
 </body>
 
 </html>
