--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PicFinder</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image" href="/images/searchImg.png">
+    <link rel="icon" type="image" href="./images/searchImg.png">
     <script src="js/script.js" defer></script>
 </head>
 
 <body>
     
     <header>
-        <img src="/images/picfinder.jpg" alt="" id="headImg" >
+        <img src="./images/picfinder.jpg" alt="" id="headImg" >
     </header>
     
     <main>
