--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     
                     <label for="sort">Sort: </label><select name="sort" id="sort">
                         <option value="relevance">Relevance</option>
-                        <option value="dnterestingness">Interestingness</option>
+                        <option value="interestingness">Interestingness</option>
                         <option value="date-posted-desc">Date-posted</option>
                     </select>
                     
