--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Picfinder</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image" href="./images/searchImg.png">
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.0.17/dist/purify.min.js"></script>
     <script src="js/script.js" defer></script>
 </head>
 
