--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     
     <footer>
         <p>All rights 'n stuff&copy;</p>
-        <p>While using Pic.finder, you agree to have read and accepted our <a href="https://media.tenor.com/pCGY5McRQMgAAAAC/gottem-meme-fun-deez-nut-lol.gif">terms</a> of use, cookie and privacy policy. </p>
+        <p>While using Pic.finder, you agree to have read and accepted our <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fc.tenor.com%2F_Y3doxogbV4AAAAC%2Fgotcha-funny.gif&f=1&nofb=1&ipt=78debf6dcdb2ff8ce9a26a47de749c643f9531fd2cbf1f0ad6e00cb06506ee60&ipo=images">terms</a> of use, cookie and privacy policy. </p>
     </footer>
 </body>
 
